@@ -8,13 +8,14 @@ except ImportError:
 from .misc import (
     file_open, get_smtp_server, reduce_ids, reduce_domain,
     grouped_slice, is_instance_method, resolve, strip_wildcard,
-    lstrip_wildcard, rstrip_wildcard, slugify)
+    lstrip_wildcard, rstrip_wildcard, slugify, sortable_values)
 from .decimal_ import decistmt
 
 __all__ = ['file_open', 'get_smtp_server', 'reduce_ids',
     'reduce_domain', 'grouped_slice', 'is_instance_method', 'resolve',
     'strip_wildcard', 'lstrip_wildcard', 'rstrip_wildcard', 'slugify',
-    'decistmt', 'ClassProperty', 'cursor_dict', 'cached_property']
+    'decistmt', 'ClassProperty', 'cursor_dict', 'cached_property',
+    'sortable_values']
 
 
 class ClassProperty(property):
